base/ca/openshift/pki-ca-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pki-ca
  name: pki-ca
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: pki-ca
  sessionAffinity: None
  type: ClusterIP
